# life-tools

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build-artifacts.sh  build-dev.sh  build.sh
.github/workflows/: ci.yaml
life_core/: CMakeLists.txt  life_core.c  life_core.h
life_tools/: CMakeLists.txt  life_core.c  life_core.h  life_io.c  life_io.h  life_tools.h  life_utils.c  life_utils.h
main/: CMakeLists.txt  main.c
test/: CMakeLists.txt
test/count_neighbors/: CMakeLists.txt  count_neighbors.c
test/suite_1/: CMakeLists.txt
